# haskell-debugger

./: .gitattributes  .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  DEBUG.md  Handle.hs  LICENSE  README.md  RELEASE.md  cabal.project  cabal.project.debug  cabal.project.self-debug-test  ghc-debugger.cabal  haskell-debugger.cabal  hie-self-debug-test.yaml  hie.yaml  run.sh  snapshot.ghc-9.14.1.yaml  snapshot.yaml  stack-windows.yaml  stack.ghc-9.14.1-windows.yaml  stack.ghc-9.14.1.yaml  stack.yaml
.github/workflows/: debugger.yaml  release.yaml
app/: Interface.hs  Main.hs
app/Debugger/: Interface.hs
docs/: index.html  out2.webm
ghc-debug-adapter/: Main.hs
ghc-debug-adapter/Development/Debug/: Adapter.hs
ghc-debugger/GHC/: Debugger.hs
ghc-debugger/GHC/Debugger/: Breakpoint.hs  Evaluation.hs  Monad.hs  Runtime.hs  Session.hs  Stopped.hs  Utils.hs
haskell-debugger-extension/: README.md  package.json
haskell-debugger-extension/sampleWorkspace/: Hi.hs  Main.hs  hie.yaml  sampleWorkspace.cabal
haskell-debugger-extension/sampleWorkspace/app/: Main.hs
haskell-debugger-extension/src/: activateMockDebug.ts  extension.ts
haskell-debugger-server/: Handles.hs  Main.hs
haskell-debugger-server/Development/Debugger/: Adaptor.hs  Breakpoints.hs  Evaluation.hs  Exit.hs  Flags.hs  Init.hs  Interface.hs  Output.hs  Stepping.hs  Stopped.hs
haskell-debugger-view/: CHANGELOG.md  haskell-debugger-view.cabal
haskell-debugger-view/src/GHC/Debugger/View/: ByteString.hs  Class.hs  Containers.hs  Text.hs
haskell-debugger/GHC/: Debugger.hs
haskell-debugger/GHC/Debugger/: Breakpoint.hs  Debuggee.hs  Evaluation.hs  Logger.hs  Monad.hs  Run.hs  Runtime.hs  Session.hs  Stopped.hs  Utils.hs
hdb/: Main.hs
hdb-dap/Development/Debug/: Adapter.hs
hdb/Development/Debug/: Adapter.hs  Interactive.hs  Options.hs
scripts/: cabal-repl-bios.sh  debug-with-ghc-bios.sh  release.sh  update-version.sh
src/: Debugger.hs
src/Debugger/: Monad.hs
src/Debugger/Interface/: Messages.hs
test/golden/T130/: T130.cabal  T130.ghc-1001.hdb-stdout  T130.ghc-914.hdb-stdout  T130.hdb-stdout  T130.hdb-test
test/golden/T130b/: T130b.cabal  T130b.ghc-1001.hdb-stdout  T130b.ghc-914.hdb-stdout  T130b.hdb-stdout  T130b.hdb-test
test/golden/T130b/app/: Main.hs
test/golden/T130b/lib/: Lib.hs
test/golden/T130c/: T130c.cabal  T130c.ghc-1001.hdb-stdout  T130c.ghc-914.hdb-stdout  T130c.hdb-test
test/golden/T135/: T135.ghc-1001.hdb-stdout  T135.ghc-914.hdb-stdout  T135.ghc-915.hdb-stdout  T135.hdb-stdout  T135.hdb-test  cabal.project  hie.yaml
test/golden/T135/myapp/: myapp.cabal
test/golden/T135/myapp/app/: Main.hs
test/golden/T135/mylib/: mylib.cabal
test/golden/T154/: T154.hdb-stdout  T154.hdb-test
test/golden/T159/: T159.ghc-1001.hdb-stdout  T159.ghc-914.hdb-stdout  T159.ghc-915.hdb-stdout  T159.hdb-stdin  T159.hdb-stdout  T159.hdb-test  T159.hs  hie.yaml
test/golden/T159b/: T159b.fails-310.ghc-915.hdb-stdout  T159b.fails-310.hdb-test  T159b.ghc-1001.hdb-stdout  T159b.ghc-914.hdb-stdout  T159b.hdb-stdin  T159b.hs  hie.yaml
test/golden/T164/: Main.hs  T164.ghc-1001.hdb-stdout  T164.ghc-914.hdb-stdout  T164.ghc-915.hdb-stdout  T164.hdb-stdin  T164.hdb-test
test/golden/T166/: T166.ghc-1001.hdb-stdout  T166.ghc-914.hdb-stdout  T166.hdb-stdin  T166.hdb-test
test/golden/T169/: T169.ghc-1001.hdb-stdout  T169.ghc-915.hdb-stdout  T169.hdb-stdout  T169.hdb-test  T169.internal.ghc-914.hdb-stdout  T169b.ghc-1001.hdb-stdout  T169b.ghc-914.hdb-stdout  T169b.ghc-915.hdb-stdout  T169b.hdb-stdin  T169b.hdb-stdout  T169b.hdb-test  T169b.hs  T169c.external.ghc-1001.hdb-stdout  T169c.external.ghc-914.hdb-stdout  T169c.external.ghc-915.hdb-stdout  T169c.external.hdb-test  T169c.hs  T169c.internal.ghc-1001.hdb-stdout  T169c.internal.ghc-914.hdb-stdout  T169c.internal.ghc-915.hdb-stdout  T169c.internal.hdb-stdin  T169c.internal.hdb-stdout  T169c.internal.hdb-test
test/golden/T217/: Main.hs  T217.ghc-1001.hdb-stdout  T217.ghc-914.hdb-stdout  T217.hdb-stdin  T217.hdb-test
test/golden/T218/: T218.ghc-1001.hdb-stdout  T218.ghc-914.hdb-stdout  T218.hdb-stdin  T218.hdb-test
test/golden/T225/: Main.hs  T225.ghc-1001.hdb-stdout  T225.ghc-914.hdb-stdout  T225.hdb-test  (+2 more)
test/golden/T234b/: T234b.cabal  T234b.ghc-1001.hdb-stdout  T234b.ghc-914.hdb-stdout  T234b.hdb-stdin  T234b.hdb-test
test/golden/T234b/lib/: Lib.hs
test/golden/T237b/: T237.cabal  T237.ghc-1001.hdb-stdout  T237.hdb-stdin  T237b.ghc-1001.hdb-stdout  T237b.ghc-914.hdb-stdout  hie.yaml
test/golden/T237b/lib/: MyType.hs
test/golden/artefacts/: artefacts.cabal  cabal.project  hie.yaml
test/golden/artefacts/app/: Main.hs
test/golden/artefacts/lib/: MyLib.hs
test/golden/self-debug-cli/: Main.hs  debuggee.cabal  self-debug-cli.hdb-stdin  self-debug-cli.no-tmp-dir.external.ghc-1001.hdb-stdout  self-debug-cli.no-tmp-dir.external.ghc-914.hdb-stdout  self-debug-cli.no-tmp-dir.external.hdb-test
test/haskell/: Main.hs
test/integration-tests/: Makefile  flake.nix  package-lock.json  package.json  tsconfig.json
test/integration-tests/data/T107a/b/: b.cabal
test/integration-tests/data/T107a/b/src/: MyLib.hs
test/integration-tests/data/T159/: T159.cabal  cabal.project
test/integration-tests/data/T159/app/: Main.hs
test/integration-tests/data/T47a/: Main.hs  T47a.cabal
test/integration-tests/data/T47e/: T47d.cabal
test/integration-tests/data/T77/: CHANGELOG.md  T77.cabal
test/integration/T107a/: cabal.project  hie.yaml  t3.cabal
test/integration/T107a/app/: Main.hs
test/integration/T107a/b/: b.cabal
test/integration/T301/: Main.hs  T301.cabal
test/integration/T38/bar/: bar.cabal
test/integration/T38/bar/src/: Bar.hs
test/integration/T47f/: Main.hs  T47f.cabal
test/integration/multi-mains/: multi-mains.cabal
test/integration/multi-mains/second/: Main.hs
vscode-extension/: README.md  default.nix  package-lock.json  package.json
vscode-extension/sampleWorkspace/: CHANGELOG.md  sampleWorkspace.cabal
vscode-extension/sampleWorkspace/app/: Hi.hs
vscode-extension/src/: activateMockDebug.ts  extension.ts
(+220 files in other folders)
