cabal-version:   3.14
name:            T130
version:         0.1.0.0
license:         NONE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    build-depends:    base, haskell-debugger-view == 0.1.0.0
    hs-source-dirs:   lib
    default-language: Haskell2010

executable T130
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, T130
    hs-source-dirs:   app
    default-language: Haskell2010
