cabal-version:   3.14
name:            T234b
version:         0.1.0.0
license:         NONE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    build-depends:    base, haskell-debugger-view
    hs-source-dirs:   lib
    default-language: Haskell2010
