cabal-version:   3.0
name:            artefacts
version:         0.1.0.0
license:         NONE
build-type:      Simple

common extensions
    default-language: GHC2021

common ghc-options
    ghc-options: -Wall -Widentities

common rts-options
    ghc-options: -rtsopts -threaded "-with-rtsopts=-N"
library
    exposed-modules: MyLib
    hs-source-dirs: lib
    build-depends: base
executable e
    import:           extensions
    import:           ghc-options
    import:           rts-options
    main-is:          Main.hs
    build-depends:    base, artefacts
    hs-source-dirs:   app
    default-language: Haskell2010
