cabal-version:      3.0
name:               debuggee
version:            0.1.0.0
-- synopsis:
-- description:
author:              
maintainer:          
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:


executable debuggee
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   .
    default-language: Haskell2010
