cabal-version:   3.14
name:            t3
version:         0.1.0.0
license:         NONE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable t3
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, b
    hs-source-dirs:   app
    default-language: Haskell2010
