cabal-version:   3.14
name:            T301
version:         0.1.0.0
license:         NONE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable t301
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, containers
    build-depends:    haskell-debugger-view
    hs-source-dirs:   .
    default-language: Haskell2010
