cabal-version:   3.14
name:            T47f
version:         0.1.0.0
license:         NONE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable t47f
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, containers
    hs-source-dirs:   .
    default-language: Haskell2010
