cabal-version:   3.8
name:            multi-mains
version:         0.1.0.0
build-type:      Simple

executable multi-mains
    main-is:          Main.hs
    other-modules:    Foo
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010

executable multi-mains-bad
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   second
    default-language: Haskell2010
