cabal-version:   3.14
name:            myapp
version:         0.1.0.0
license:         NONE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable myapp
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, mylib >= 0.1234
    hs-source-dirs:   app
    default-language: Haskell2010
