cabal-version:   3.14
name:            T47d
version:         0.1.0.0
license:         NONE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable T47d
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, text
    hs-source-dirs:   .
    default-language: Haskell2010
