cabal-version:   3.0
name:            T77
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable T77
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ==4.20.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
