cabal-version:      3.8
name:               bar
version:            0.1.0.0
build-type:         Simple

library
    exposed-modules:  Bar
    build-depends:
        base,
        foo,
    hs-source-dirs:   src
    default-language: Haskell2010

executable bar-exe
    main-is: app/Main.hs
    build-depends:
        base,
        bar,
        foo,
    default-language: Haskell2010
